Improve styling of homepage and clean up formatting of recipe pages
I improved the styling of the homepage, and indented the contents of the
div tags in the recipe pages to improve readability.

--- a/style.css
+++ b/style.css
@@ -2,9 +2,21 @@
     background-color: gainsboro;
     color: black;
     font-family:Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 .homepage,
 .centre {
     text-align: center;
+}
+
+.homepage {
+    width: 300px;
+    margin: auto;
+}
+
+.homepage h1,
+.homepage p {
+    padding: 5px;
+    border: 2px solid black;
 }
