Amend styling of homepage and titles of recipe pages
I felt like the previous design was not an appropriate demonstration of my current CSS studies.
In order to reflect this better I have begun the process of updating the whole website design to
something more modern. I have completed this task for the headings of each page in the website, and
will continue to do this for the contents of each page too.

--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 * {
-    background-color: gainsboro;
+    background-color: white;
     color: black;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
 
-.homepage,
-.centre {
-    text-align: center;
+h1,
+h2 {
+    font-size: 100px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 10px;
+    border-left: 5px solid rgb(255, 0, 0);
 }
 
-.homepage {
-    width: 300px;
-    margin: auto;
-}
-
-.homepage h1,
 .homepage p {
-    padding: 5px;
-    border: 2px solid black;
+    font-size: 30px;
+}
+
+.homepage a {
+    text-decoration: none;
 }
